[ccg001] update sample screen

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/001/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/001/index.xhtml
@@ -36,21 +36,44 @@
 					<div class="cell">
 						<h2>Common properties:</h2>
 						<div data-bind="ntsCheckBox:{checked: isSelectAllEmployee}">Show EmployeeList (検索タイプ)</div><br/>
-						<div data-bind="ntsCheckBox:{checked: isQuickSearchTab}">systemType (システム区分)</div><br/>
+						<span>systemType (システム区分):</span>
+						<div tabindex="2" data-bind="ntsComboBox: {
+									name: '#[CCG001_28]',
+									options: systemTypes,
+									optionsValue: 'value',
+									value: systemType,
+									optionsText: 'name',
+									editable: false,
+									enable: true,
+									columns: [
+										{ prop: 'name', length: 5 },
+									]}"></div>
 						<div data-bind="ntsCheckBox:{checked: isQuickSearchTab}">Show QuickSearch (クイック検索)</div><br/>
 						<div data-bind="ntsCheckBox:{checked: isAdvancedSearchTab}">Show AdvancedSearch (詳細検索タブ)</div><br/>
-						<div data-bind="ntsCheckBox:{checked: isAdvancedSearchTab}">Show BaseDate (基準日利用)</div><br/>
-						<div data-bind="ntsCheckBox:{checked: isAdvancedSearchTab}">Show Closure (就業締め日利用)</div><br/>
-						<div data-bind="ntsCheckBox:{checked: isAdvancedSearchTab}">Show All Closure (全締め表示)</div><br/>
-						<div data-bind="ntsCheckBox:{checked: isAdvancedSearchTab}">Show Period (対象期間利用)</div><br/>
-						<div data-bind="ntsCheckBox:{checked: isAdvancedSearchTab}">Show period YM/YMD (対象期間精度)</div><br/>
+						<div data-bind="ntsCheckBox:{checked: showBaseDate}">Show BaseDate (基準日利用)</div><br/>
+						<div data-bind="ntsCheckBox:{checked: showClosure}">Show Closure (就業締め日利用)</div><br/>
+						<div data-bind="ntsCheckBox:{checked: showAllClosure}">Show All Closure (全締め表示)</div><br/>
+						<div data-bind="ntsCheckBox:{checked: showPeriod}">Show Period (対象期間利用)</div><br/>
+						<div data-bind="ntsCheckBox:{checked: periodFormatYM}">Show period format: YM(対象期間精度)</div><br/>
 					</div>
 					<div class="cell">
 						<h2>Required param properties:</h2>
-						<div data-bind="ntsCheckBox:{checked: isMutipleCheck}">In service (在職区分)</div><br/>
-						<div data-bind="ntsCheckBox:{checked: isSelectAllEmployee}">Leave of absence (休職区分)</div>
-						<div data-bind="ntsCheckBox:{checked: isSelectAllEmployee}">Close (休業区分)</div>
-						<div data-bind="ntsCheckBox:{checked: isSelectAllEmployee}">Retirement (退職区分)</div>
+						basedate:<div tabindex="3"
+									data-bind="ntsDatePicker: {
+										dateFormat: 'YYYY/MM/DD',
+										value: baseDate }"></div><br/>
+						period start:<div tabindex="3"
+									data-bind="ntsDatePicker: {
+										dateFormat: 'YYYY/MM/DD',
+										value: periodStartDate }"></div><br/>
+						period end:<div tabindex="3"
+									data-bind="ntsDatePicker: {
+										dateFormat: 'YYYY/MM/DD',
+										value: periodEndDate }"></div><br/>
+						<div data-bind="ntsCheckBox:{checked: inService}">In service (在職区分)</div><br/>
+						<div data-bind="ntsCheckBox:{checked: leaveOfAbsence}">Leave of absence (休職区分)</div>
+						<div data-bind="ntsCheckBox:{checked: closed}">Close (休業区分)</div>
+						<div data-bind="ntsCheckBox:{checked: retirement}">Retirement (退職区分)</div>
 					</div>
 					<div class="cell">
 						<h2>Quick search properties:</h2>
@@ -61,16 +84,17 @@
 					</div>
 					<div class="cell">
 						<h2>Advanced search properties:</h2>
-						<div data-bind="ntsCheckBox:{checked: isEmployeeOfWorkplace}">Show Employment (雇用条件)</div><br/>
-						<div data-bind="ntsCheckBox:{checked: isEmployeeWorkplaceFollow}">Show workplace (職場条件)</div><br/>
-						<div data-bind="ntsCheckBox:{checked: isEmployeeWorkplaceFollow}">Show classification (分類条件)</div><br/>
-						<div data-bind="ntsCheckBox:{checked: isEmployeeWorkplaceFollow}">Show jobtitle (職位条件)</div><br/>
-						<div data-bind="ntsCheckBox:{checked: isEmployeeWorkplaceFollow}">Show worktype (勤種条件)</div><br/>
+						<div data-bind="ntsCheckBox:{checked: showEmployment}">Show Employment (雇用条件)</div><br/>
+						<div data-bind="ntsCheckBox:{checked: showWorkplace}">Show workplace (職場条件)</div><br/>
+						<div data-bind="ntsCheckBox:{checked: showClassification}">Show classification (分類条件)</div><br/>
+						<div data-bind="ntsCheckBox:{checked: showJobTitle}">Show jobtitle (職位条件)</div><br/>
+						<div data-bind="ntsCheckBox:{checked: showWorktype}">Show worktype (勤種条件)</div><br/>
 						<div data-bind="ntsCheckBox:{checked: isMutipleCheck}">Enable multiple selection (選択モード)</div><br/>
 					</div>
 					</div>
 					<div class="table" style="width: auto; margin: auto">
 						<button data-bind="click: reloadCcg001">Reload Component</button>
+						<button data-bind="click: setDefaultCcg001Option">Reset properties</button>
 					</div>
 					<hr/>
 					<div style="margin-left: 100px;">
