fix bug KMF002: NUK-1296

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/a/a_index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/a/a_index.xhtml
@@ -180,6 +180,7 @@
 																	value: weekHDSet().inLegalHoliday,
 																	constraint: 'WeekNumberOfDay',
 																	option: {width: '85px',
+																			decimallength: 0,
 																	}, 
 																	required: true,
 																	enable: enableWeekHDSetInLegalHoliday,
@@ -202,7 +203,7 @@
 																	required: true,
 																	enable: enableWeekHDSetOutLegalHoliday,
 																	readonly: false,
-																	name:'#[KMF002_54]'
+																	name:'#[KMF002_55]'
 																}" />
 								<span>日</span>
 						</div>
