--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/cmm/045/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/cmm/045/a/index.xhtml
@@ -22,22 +22,21 @@
 				<button>#{i18n.getText('CMM045_3')}</button>
 				<!-- A1_2: Button 印刷 -->
 				<button>#{i18n.getText('CMM045_4')}</button>
- 				<div data-bind="ntsSwitchButton: {
-						options: roundingRules,
-						optionsValue: 'code',
-						optionsText: 'name',
-						value: selectedRuleCode,
-						enable: true }"></div>
-			
+				<div data-bind="ntsSwitchButton: {
+					options: roundingRules,
+					optionsValue: 'code',
+					optionsText: 'name',
+					value: selectedRuleCode,
+					enable: true }"></div>
 			</div>
 			<div id="content-area">
 				<div>
 					<!-- <div data-bind="ntsFormLabel: {}">#{i18n.getText('CMM045_29')}</div> -->
 					
 				</div>
-<!-- 			<div style = "margin-left: 20px; margin-top: 50px;" class="compact-grid">
-					<table id="grid21"></table>
-			</div> -->
+				<div style = "margin-left: 20px; margin-top: 50px;" class="compact-grid">
+					<table id="grid1"></table>
+			</div>
 			<div style = "margin-left: 20px; margin-top: 50px;" class="compact-grid">
 					<table id="grid2"></table>
 			</div>
