[CCG001] update UI

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/share/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/share/index.xhtml
@@ -285,7 +285,7 @@
 	</div>
 	<div id="hor-scroll-button-hide">
 		<div class="ccg001-tbl-cell-middle">
-			<div id="ccg001-btn-search-drawer" class="ccg-btn-vertical" data-bind="click: showHide">
+			<div id="ccg001-btn-search-drawer" class="ccg-btn-vertical" data-bind="click: showComponent">
 				<div class="ccg001-tbl-cell-middle">
 				<i class="icon icon-01-searchmode"></i>
 				<div class="ccg-lbl-vertical ccg-lbl-search-drawer">#{i18n.getText('CCG001_21')}</div>
