--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/000/b/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/000/b/index.xhtml
@@ -26,6 +26,7 @@
 			<com:stylefile path="../../009/share/kaf009.share.style.css" />
 			<com:stylefile path="../../007/share/kaf007.share.style.css" />
 			<com:stylefile path="../../005/cm/kaf005.cm.main.css" />
+			<com:stylefile path="../../010/cm/kaf010.cm.main.css" />
 			<com:scriptfile path="../../002/shr/kaf002.shr.service.js" />
 			<com:scriptfile path="../../002/shr/kaf002.shr.vm.js" />
 			<com:scriptfile path="../../002/m1/kaf002.m1.vm.js" />
