--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/010/cm/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/010/cm/index.xhtml
@@ -145,7 +145,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="valign-center control-group">
+		<div class="valign-center control-group" data-bind ="if: screenModeNew()">
 			<div class="table">
 				<div class="cell valign-top cm-column2">
 				<div class="lblTitle"></div>
@@ -153,24 +153,37 @@
 				<div tabindex="12" class="row-cell-margin right-content"
 						data-bind="ntsSwitchButton: {name: '#{i18n.getText('KAF010_3')}',
 										options:ko.observableArray([
-								                { goCode1: 0, goName1: '#{i18n.getText('KAF009_16')}' },
-								                { goCode1: 1, goName1: '#{i18n.getText('KAF009_17')}' }
+								                { goCode1: 1, goName1: '#{i18n.getText('KAF009_16')}' },
+								                { goCode1: 0, goName1: '#{i18n.getText('KAF009_17')}' }
 								                ]),
 										optionsValue: 'goCode1',
 										optionsText: 'goName1',
-										value: goSelected1}, if: screenModeNew()">
+										value: goSelected1}">
 				</div>
-				<div data-bind = "if: !screenModeNew()"> <lable class="label fix-margin-left" data-bind="text: goSelected1()==0 ? '#{i18n.getText('KAF009_16')}' : '#{i18n.getText('KAF009_17')}'"></lable></div>
+				
 				<div tabindex="13" class="row-cell-margin right-content"
 						data-bind="ntsSwitchButton: {name: '#{i18n.getText('KAF010_4')}',
 										options:ko.observableArray([
-								                { backCode1: 0,  backName1: '#{i18n.getText('KAF009_18')}' },
-								                { backCode1: 1,  backName1: '#{i18n.getText('KAF009_19')}' }
+								                { backCode1: 1,  backName1: '#{i18n.getText('KAF009_18')}' },
+								                { backCode1: 0,  backName1: '#{i18n.getText('KAF009_19')}' }
 								                ]),
 										optionsValue: 'backCode1',
 										optionsText: 'backName1',
 										value: backSelected1}">
 				</div>
+			</div>
+		</div>
+		<div class="valign-center control-group"
+			data-bind="if: !screenModeNew()">
+			<div class="table" style = "margin-bottom: 9px;">
+				<div class="cell valign-top cm-column2">
+					<div class="lblTitle"></div>
+				</div>
+				<lable class="label fix-margin-left"
+					data-bind="text: goSelected1()==0 ? '#{i18n.getText('KAF009_16')}' : '#{i18n.getText('KAF009_17')}'"></lable>
+				<label class="valign-center link-label-kaf010b"></label>	
+				<lable class="label fix-margin-left"
+					data-bind="text: goSelected2()==0 ? '#{i18n.getText('KAF009_18')}' : '#{i18n.getText('KAF009_19')}'"></lable>
 			</div>
 		</div>
 		<!--勤務時間 2-->
@@ -209,8 +222,8 @@
 					<div tabindex="12" class="row-cell-margin right-content"
 							data-bind="ntsSwitchButton: {name: '#{i18n.getText('KAF010_3')}',
 											options:ko.observableArray([
-									                { goCode2: 0, goName2: '#{i18n.getText('KAF009_16')}' },
-									                { goCode2: 1, goName2: '#{i18n.getText('KAF009_17')}' }
+									                { goCode2: 1, goName2: '#{i18n.getText('KAF009_16')}' },
+									                { goCode2: 0, goName2: '#{i18n.getText('KAF009_17')}' }
 									                ]),
 											optionsValue: 'goCode2',
 											optionsText: 'goName2',
@@ -219,8 +232,8 @@
 					<div tabindex="13" class="row-cell-margin right-content"
 							data-bind="ntsSwitchButton: {name: '#{i18n.getText('KAF010_4')}',
 											options:ko.observableArray([
-									                { backCode2: 0,  backName2: '#{i18n.getText('KAF009_18')}' },
-									                { backCode2: 1,  backName2: '#{i18n.getText('KAF009_19')}' }
+									                { backCode2: 1,  backName2: '#{i18n.getText('KAF009_18')}' },
+									                { backCode2: 0,  backName2: '#{i18n.getText('KAF009_19')}' }
 									                ]),
 											optionsValue: 'backCode2',
 											optionsText: 'backName2',
