--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/010/cm/kaf010.cm.main.css
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/010/cm/kaf010.cm.main.css
@@ -28,6 +28,9 @@
 	/*margin-left: 30px;*/
 	padding: 0px 10px 0px 10px;
 }
+.link-label-kaf010b{
+	padding: 0px 10px 0px 76px;
+}
 /*Set Width*/
 input.nts-editor.nts-input.reset-element {
 	text-align: center;
