[Fix_bug] [NUK-1282] fix bug validate primitive value

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a3/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a3/index.xhtml
@@ -6,6 +6,7 @@
 	<com:ValidatorScript>
 		nts.uk.shr.com.time.TimeWithDayAttr
 		nts.uk.ctx.at.shared.dom.ot.frame.OvertimeWorkFrameNo
+		nts.uk.ctx.at.shared.dom.common.time.AttendanceTime
    	</com:ValidatorScript>
    	
    	<div>
