--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a6/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a6/index.xhtml
@@ -5,6 +5,7 @@
 	xmlns:h="http://xmlns.jcp.org/jsf/html">
 	<com:ValidatorScript>
 		nts.uk.shr.com.time.TimeWithDayAttr
+		nts.uk.ctx.at.shared.dom.common.time.AttendanceTime
    	</com:ValidatorScript>
    	
    	<div class="tab-seperator">	
