Fix bug tabindex.

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/base/fixedtable/fixedtable.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/base/fixedtable/fixedtable.xhtml
@@ -22,7 +22,7 @@
 		</com:ko>
 		<com:ko tag="if" bind="helpImageUrl">
 			<button class="fixed-table-help"
-				data-bind="ntsHelpButton: {image: helpImageUrl, position: 'right top', attr: {tabindex: tabindex}}">?</button>
+				data-bind="ntsHelpButton: {image: helpImageUrl, position: 'right top'}, attr: {tabindex: tabindex}">?</button>
 		</com:ko>
 		</div>
 
