--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/005/b/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/005/b/index.xhtml
@@ -276,6 +276,7 @@
 												constraint: 'NumericItemMin',
 												option:  new nts.uk.ui.option.NumberEditorOption({
 												grouplength: 3,
+												decimalPart>8?8:decimalPart,
 									            	placeholder: '',
 									            	width: '80px',
 									            	textalign: 'left'
@@ -293,6 +294,7 @@
 												constraint: 'NumericItemMax',
 												option:  new nts.uk.ui.option.NumberEditorOption({
 												grouplength: 3,
+												decimalPart>8?8:decimalPart,
 									            	placeholder: '',
 									            	width: '80px',
 									            	textalign: 'left'
@@ -329,12 +331,13 @@
 												constraint: 'NumericItemMax',
 												option:  new nts.uk.ui.option.CurrencyEditorOption({
 													grouplength: 3,
-									            	decimallength: decimalPart>8?8:decimalPart ,
+									            	decimallength: decimalPart>8?8:decimalPart,
 									            	width: '70px',
 									            	textalign: 'left',
 									            	currencyformat: 'JPY',
 									            	currencyposition:'right'
 									            }),
+									            
 												required: false,
 												enable: true,
 												readonly: false}"
@@ -354,6 +357,7 @@
 												option:  new nts.uk.ui.option.CurrencyEditorOption({
 													grouplength: 3,
 									            	decimallength: decimalPart>8?8:decimalPart,
+									            	 mantissaMaxLength: decimalPart>8?8:decimalPart,
 									            	width: '70px',
 									            	textalign: 'left',
 									            	currencyformat: 'JPY',
@@ -371,7 +375,8 @@
 												constraint: 'NumericItemMax',
 												option:  new nts.uk.ui.option.CurrencyEditorOption({
 													grouplength: 3,
-									            	decimallength: decimalPart>8?8:decimalPart ,
+									            	decimallength: decimalPart>8?8:decimalPart,
+									            	 mantissaMaxLength: decimalPart>8?8:decimalPart,
 									            	width: '70px',
 									            	textalign: 'left',
 									            	currencyformat: 'JPY',
@@ -392,7 +397,7 @@
 												constraint: 'NumericItemMin',
 												option: new nts.uk.ui.option.NumberEditorOption({
 							                        grouplength: 3,
-							                        decimallength: decimalPart>8?8:decimalPart,
+							                       decimallength: decimalPart>8?8:decimalPart,
 							                        width: '75px',
 							                        textalign: 'left'
 							                    }),
