--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksm/011/c/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksm/011/c/index.xhtml
@@ -9,7 +9,7 @@
 							options: controlUseCls,
 							optionsValue: 'code',
 							optionsText: 'name',
-							value: selectedControlUse,
+							value: useAtr,
 							enable: true }"></div>
 				</td>
 			</tr>
