--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/010/cm/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/010/cm/index.xhtml
@@ -219,7 +219,8 @@
 					<div class="cell valign-top cm-column2">
 								<div class="lblTitle"></div>
 					</div>
-					<div tabindex="12" class="row-cell-margin right-content"
+					<!--A4_18  直行する・しないスイッチ -->
+					<div tabindex="14" class="row-cell-margin right-content"
 							data-bind="ntsSwitchButton: {name: '#{i18n.getText('KAF010_3')}',
 											options:ko.observableArray([
 									                { goCode2: 1, goName2: '#{i18n.getText('KAF009_16')}' },
@@ -229,7 +230,8 @@
 											optionsText: 'goName2',
 											value: goSelected2}">
 					</div>
-					<div tabindex="13" class="row-cell-margin right-content"
+					<!--A4_19 直帰する・しないスイッチ -->
+					<div tabindex="15" class="row-cell-margin right-content"
 							data-bind="ntsSwitchButton: {name: '#{i18n.getText('KAF010_4')}',
 											options:ko.observableArray([
 									                { backCode2: 1,  backName2: '#{i18n.getText('KAF009_18')}' },
@@ -269,10 +271,10 @@
 							<!--A5_5 休憩時間順序--> 						
 							<td class="header" data-bind="text: frameName"></td>
 							<!--A5_6 開始時刻--> 						
-							<td><input tabindex="12" class="right-content"
+							<td><input tabindex="16" class="right-content"
 								data-bind="attr: { id: 'restTimeStart_'+attendanceID()+'_'+frameNo()}, ntsTimeWithDayEditor: {name: '#[KAF010_337]', value: startTime, constraint:'TimeWithDayAttr', option: {width: '85px', timeWithDay: true}}" /></td>
 							<!--A5_7 終了時刻--> 						
-							<td><input tabindex="12" class="right-content"
+							<td><input tabindex="17" class="right-content"
 								data-bind="attr: { id: 'restTimeEnd_'+attendanceID()+'_'+frameNo()}, ntsTimeWithDayEditor: {name: '#[KAF010_338]', value: endTime, constraint:'TimeWithDayAttr', option: {width: '85px', timeWithDay: true}}" /></td>
 						</tr>
 					</tbody>
@@ -281,7 +283,7 @@
 		</div>
 		<div data-bind="if: displayCaculationTime">
 			<!--A5_8 計算ボタン--> 			
-			<button data-bind="click: CaculationTime" tabindex="14" style="margin: 15px 0px 10px 290px;" class="caret-bottom">#{i18n.getText('KAF010_43')}</button>
+			<button data-bind="click: CaculationTime" tabindex="18" style="margin: 15px 0px 10px 290px;" class="caret-bottom">#{i18n.getText('KAF010_43')}</button>
 		</div>
 		<div class="cf valign-top control-group">
 			<!--A6_1 休出時間ラベル--> 		
@@ -313,7 +315,7 @@
 							<!--A6_7 休出時間名称--> 						
 							<td class="header" data-bind="attr: { id: 'overtimeHoursHeader_'+attendanceID()+'_'+frameNo()},text: frameName"></td>
 							<!--A6_8 休出申請時間入力--> 						
-							<td data-bind="attr: { id: 'overtimeHoursCheck_'+attendanceID()+'_'+frameNo()}, style: { 'background-color' : color }"><input tabindex="16" class="right-content"
+							<td data-bind="attr: { id: 'overtimeHoursCheck_'+attendanceID()+'_'+frameNo()}, style: { 'background-color' : color }"><input tabindex="19" class="right-content"
 								data-bind="attr: { id: 'overtimeHoursCheck_'+attendanceID()+'_'+frameNo()},style: { 'background-color' : color },ntsTimeEditor: {name: '#[KAF010_56]',value: applicationTime, option: {width: '80px'}, inputFormat: 'time', mode: 'time',constraint:'OvertimeAppPrimitiveTime' }" /></td>
 							<!--A6_9 休出事前申請時間--> 						
 							<td class="right-content" data-bind="text: preAppTime"></td>
@@ -411,7 +413,7 @@
 			<!--A9_1 定型理由ラベル--> 			
 			<div class="lblTitle cm-column" data-bind="ntsFormLabel:{}">#{i18n.getText('KAF005_86')}</div>
 			<!--A9_2 定型理由選択--> 			
-			<div tabindex="18" class="combo-box"
+			<div tabindex="23" class="combo-box"
 				data-bind="ntsComboBox: {name: '#[KAF005_87]', 
 								options: reasonCombo,
 								optionsValue: 'reasonId',
@@ -429,7 +431,7 @@
 				data-bind="ntsFormLabel: {}">#{i18n.getText('KAF005_88')}</div>
 			<!--A9_4 申請理由入力--> 
 			<div id="multiline">
-				<textarea tabindex="19" id ="appReason"
+				<textarea tabindex="24" id ="appReason"
 					data-bind="ntsMultilineEditor: {name: '#[KAF005_89]', 
 								value: multilContent,
 								option: {
@@ -446,7 +448,7 @@
 			<!--A9_5 乖離定型理由ラベル--> 
 			<div class="lblTitle cm-column" data-bind="ntsFormLabel:{}">#{i18n.getText('KAF005_90')}</div>
 			<!--A9_6 乖離定型理由選択--> 
-			<div tabindex="20" class ="combo-box"
+			<div tabindex="25" class ="combo-box"
 				data-bind="ntsComboBox: {name: '#[KAF005_91]', 
 								options: reasonCombo2,
 								optionsValue: 'reasonId',
@@ -464,7 +466,7 @@
 				data-bind="ntsFormLabel: {}">#{i18n.getText('KAF005_92')}</div>
 			<!--A9_8 乖離理由入力--> 
 			<div id="multiline"> 
-				<textarea tabindex="21" id ="divergenceReason"
+				<textarea tabindex="26" id ="divergenceReason"
 					data-bind="ntsMultilineEditor: {name: '#[KAF005_93]', 
 								value: multilContent2,
 								option: {
