KMF002: fix display header sidebar in IE

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/a/kmf002.a.main.css
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/a/kmf002.a.main.css
@@ -46,20 +46,24 @@
 }
 
 .sidebar-content-header {
-	display: flex;
-	align-items: center;	
+	/* display: flex; */
+	/* align-items: center; */
 }
 
 .sidebar-content-header > span:nth-child(1) {
 	margin-left: 55px;
+	margin-top: 8px;
+	display: inline-block;
 }
 
 .sidebar-content-header > button:nth-child(2) {
 	margin-left: 60px;
+	margin-top: 8px;
 }
 
 .sidebar-content-header > button:nth-child(3) {
 	margin-left: 60px;
+	margin-top: 8px;
 } 
 
 .hidden-element {
