--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/001/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/001/a/index.xhtml
@@ -7,8 +7,6 @@
 <body>
 	<ui:composition template="../../../../master/base.xhtml">
 		<ui:define name="htmlHead">
-		    <com:ValidatorScript>
-            </com:ValidatorScript>
             <com:EnumScript>
 				nts.uk.ctx.at.function.dom.alarm.AlarmCategory
 			</com:EnumScript>
@@ -17,6 +15,12 @@
 			<com:scriptfile path="kal001.a.service.js" />
 			<com:scriptfile path="kal001.a.vm.js" />
 			<com:scriptfile path="kal001.a.start.js" />
+			<com:stylefile path="/view/ccg/share/style.css" of="/nts.uk.com.web" />
+			<com:scriptfile path="/view/kcp/share/list.js" of="/nts.uk.com.web" />
+			<com:scriptfile path="/view/kcp/share/tree.js" of="/nts.uk.com.web" />
+			<com:scriptfile path="/view/ccg/share/ccg.service.js" of="/nts.uk.com.web" />
+			<com:scriptfile path="/view/ccg/share/ccg.vm.js" of="/nts.uk.com.web" />
+			<com:scriptfile path="/view/kcp/share/list.js" of="/nts.uk.com.web"/>
 		</ui:define>
 
 		<ui:define name="content">
@@ -27,17 +31,71 @@
 				</div>
 			</div>
 			<div id="contents-area" class ='fixed-flex-layout' >
-					<div id="left-content" class ="bg-green caret-right caret-background fixed-flex-layout-left">
-		
+					<div id="left-content" class ="fixed-flex-layout-left">
+						<div id="ccgcomponent"></div>
+						<div id="component-employee-list"></div>
 					</div>
 					
 					<div id="right-content" class ='fixed-flex-layout-right' >
 						<table class="control-group">						
+							<tbody>
+								<tr>
+									<td>
+										<div data-bind="ntsFormLabel: {}">#{i18n.getText('KAL001_4')}</div>
+									</td>
+									<td>
+										<div  id="combo-box" data-bind="ntsComboBox: {
+											options: alarmCombobox,
+											optionsValue: 'alarmCode',
+											visibleItemsCount: 10,
+											value: currentAlarmCode,
+											optionsText: 'alarmName',
+											editable: false,
+											enable: true,
+											columns: [
+												{ prop: 'alarmCode', length: 2 },
+												{ prop: 'alarmName', length: 20 },
+											]}"></div>										
+									</td>								
+								</tr>
+								<tr>
+									<td>
+										<div data-bind="ntsFormLabel: {}">#{i18n.getText('KAL001_5')}</div>
+									</td>
+									<td>
+										<table id="fixed-table">
+											<colgroup>
+												<col width="100px"/>
+												<col width="200px"/>
+												<col width="300px"/>
+											</colgroup>
+											<thead>
+												<tr>
+													<th class="ui-widget-header" >Lam Leader</th>
+													<th class="ui-widget-header" >#{i18n.getText('KAL001_6')}</th>
+													<th class="ui-widget-header" >#{i18n.getText('KAL001_7')}</th>
 
+												</tr>
+											</thead>
+											<tbody>
+												<com:ko-foreach bind="periodByCategory">
+													<tr>
+														<td><div data-bind="ntsCheckBox: {checked: checkBox}"></div></td>
+														<td data-bind ="text: categoryName "></td>
+														<td><div data-bind="ntsDatePicker: {value: startDate, dateFormat: 'YYYY/MM/DD'}"></div> <span> ~ </span>
+															<div data-bind="ntsDatePicker: {value: endDate, dateFormat: 'YYYY/MM/DD'}"></div>
+														</td>
+													</tr>
+												</com:ko-foreach>
+											</tbody>
+										</table>
+									</td>								
+								</tr>
+							</tbody>
 						</table>
 										
 					</div>
-				</div>
+			</div>
 		</ui:define>
 	</ui:composition>
 </body>
