--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/001/b/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/001/b/index.xhtml
@@ -51,12 +51,12 @@
 				</div>
 				<div id="contents-area" class="fixed-flex-layout">
 					<div class="fixed-flex-layout-left">
-						<div data-bind="ntsPanel:{width: '350px', height: '400px', showIcon: true, visible: true}">
+						<div data-bind="ntsPanel:{width: '350px', height: '460px', showIcon: true, visible: true}">
 							<div data-bind="ntsFormLabel: { }">#{i18n.getText('CMF001_38')}</div>
 							<div tabindex="7" style="width: 350px" data-bind="ntsSearchBox: {searchMode: 'filter', targetKey: 'dispConditionSettingCode', comId: 'B3_4', 
 								items: listStandardImportSetting, selected: selectedStandardImportSettingCode, selectedKey: 'dispConditionSettingCode', fields: ['dispConditionSettingCode', 'dispConditionSettingName'], mode: 'igGrid'}" />		
 							<table id="B3_4" data-bind="ntsGridList: {
-									height: 320,
+									rows: 15,
 									name: '#[CMF001_39]', 
  									dataSource: listStandardImportSetting,
 									primaryKey: 'dispConditionSettingCode', 
